# backend/routes/bookmark_routes.go
@@ -11,5 +11,5 @@ func bookmarkRoutes(api fiber.Router) {
 	api.Get("/bookmarks",  middlewares.AuthMiddleware(), controllers.ListBookmarks)
 	api.Get("/bookmarks/novels", middlewares.AuthMiddleware(), controllers.GetNovelByBookmarks)
 	api.Post("/bookmarks",  middlewares.AuthMiddleware(), controllers.AddBookmark)
-	api.Delete("/bookmarks/:novel_id", middlewares.AuthMiddleware(), controllers.RemoveBookmark)
+	api.Delete("/bookmarks/:id", middlewares.AuthMiddleware(), controllers.RemoveBookmark)
 }
